manifests/dev/poller/Deployment-poller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poller
  namespace: demo
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: poller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: poller
    spec:
      containers:
        - env:
            - name: OTEL_EP
              value: signoz-otel-collector.signoz.svc.cluster.local:4317
            - name: LOCATOR_URL
              value: http://locator.demo.svc.cluster.local:3000
            - name: SERVICE_FQDN
              value: poller.demo.svc.cluster.local:3000
            - name: NOTIFICATION_ENDPOINT
              value: https://discord.com/api/webhooks/1433874286921253005/2g9_U5BsPm-YUB0fdx4vaqmhV_mz-VHwOYBabV5ZGjHXggwTC_4jbh1uuTdg7WHyxcXN
          image: ghcr.io/fkouhai/rss_poller-x86_64-linux:1.0.3
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 5
          name: poller
          readinessProbe:
            httpGet:
              path: /ready
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          volumeMounts:
            - mountPath: /etc/rss-poller
              name: poller-config
              readOnly: true
      securityContext:
        fsGroup: 1000
      volumes:
        - configMap:
            name: poller-config
          name: poller-config
