manifests/dev/poller/Service-poller.yaml
apiVersion: v1
kind: Service
metadata:
  name: poller
  namespace: demo
spec:
  ports:
    - name: http
      port: 3000
  selector:
    app.kubernetes.io/name: poller
