manifests/dev/poller/Ingress-poller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poller
  namespace: demo
spec:
  rules:
    - host: poller.143.47.60.246.nip.io
      http:
        paths:
          - backend:
              service:
                name: poller
                port:
                  number: 3000
            path: /
            pathType: Prefix
